# sdlgl

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.txt  clang_format_project.sh  sdlglConfig.cmake
audio/: audio.cpp  audio.h  channel.cpp  channel.h  sound.cpp  sound.h  track.cpp  track.h
cmake/emscripten/: EmscriptenSDL2.cmake
cmake/sdl2/: README.md
collision/: collider.cpp  collider.h  hitbox.cpp  hitbox.h
dependencies/: json.hpp
documentation/: overview.md
documentation/graphics/: graphics.md
documentation/input/: inputs.md
examples/blank/: CMakeLists.txt  Makefile  main.cpp
examples/collision/: CMakeLists.txt  Makefile  main.cpp  resources.json
examples/collision/entities/: mover.cpp  mover.h  rotator.cpp  rotator.h
examples/collision_performance/: CMakeLists.txt  Makefile  main.cpp  resources.json
examples/collision_performance/entities/: rotator.cpp  rotator.h
examples/dialogue/: CMakeLists.txt  main.cpp  resources.json
examples/noise/: CMakeLists.txt  Makefile  main.cpp
examples/particles/: CMakeLists.txt  main.cpp  resources.json
examples/red_box/: CMakeLists.txt  Makefile  box.cpp  box.h  demo_world.cpp  demo_world.h  main.cpp
examples/sounds/: CMakeLists.txt  Makefile  main.cpp  resources.json  sound_button.cpp  sound_button.h
examples/sprite/: CMakeLists.txt  Makefile  main.cpp  player.cpp  player.h  resources.json
examples/tea_game/: CMakeLists.txt  build_web.sh  game.cpp  game.h  main.cpp  resources.json  shell.html
examples/tea_game/build_web/: CMakeCache.txt  Makefile  TeaGame.html  TeaGame.js  TeaGame.wasm  cmake_install.cmake
examples/tea_game/entities/: player.cpp  player.h
examples/tea_game/res/tilemaps/: furniture.json  room_builder.json
examples/tea_game/states/: main_menu_state.cpp  main_menu_state.h  playing_state.cpp  playing_state.h
examples/text/: CMakeLists.txt  main.cpp  resources.json
examples/tilemap/: CMakeLists.txt  main.cpp  resources.json
examples/tilemap/res/tilemaps/: room_builder.json
game/: clock.cpp  clock.h  context.cpp  context.h  entity.cpp  entity.h  game_state.h  game_state_manager.cpp  game_state_manager.h  physical_entity.cpp  physical_entity.h  scene.cpp  scene.h  simple_context.cpp  simple_context.h  timer.cpp  timer.h
graphics/: character.cpp  character.h  font_renderer.cpp  font_renderer.h  fps_counter.cpp  fps_counter.h  graphics.cpp  graphics.h  offset.h  resources.cpp  resources.h  sprite.cpp  sprite.h  sprite_offset.h  text.cpp  text.h  texture.cpp  texture.h  tilemap.cpp  tilemap.h  tileset.cpp  tileset.h
graphics/effects/: emitter.cpp  emitter.h  linear_emitter.cpp  linear_emitter.h  linear_particle.cpp  linear_particle.h  particle.cpp  particle.h  particles.cpp  particles.h
input/: inputs.cpp  inputs.h
ui/: dialogue.h  entity_count.cpp  entity_count.h  fps_display.cpp  fps_display.h  menu.cpp  menu.h  menu_background.cpp  menu_background.h  typewriter_text.cpp  typewriter_text.h
utilities/: math.cpp  math.h  noise.cpp  noise.h  random.cpp  random.h  string_utils.cpp  string_utils.h
